responsive for mobile done

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -42,7 +42,7 @@ body {
 
 // ** Mobile Design
 
-@media (min-width: 375px) and (max-width: 743px) {
+@media (max-width: 743px) {
   body {
     padding-top: 80px;
     background: rgb(58, 180, 177);
