hover in last two projects adjusted (mobile)

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -753,6 +753,10 @@ body {
                       left: 50%;
                       transform: translate(-50%, -50%);
                     }
+                    &:hover .projectDesc3, &:hover .projectDesc4 {
+                      width: 94%;
+                      margin-left:6px;
+                    }
                   }
                   .screenProject2 {
                     // @extend .screen;
