--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1029,6 +1029,10 @@ body {
             font-weight: 400;
             line-height: normal;
           }
+          .invalidEmail {
+            color: rgb(198, 66, 66);
+            display: none;
+          }
         }
       }
       .frameForm2 {
@@ -1104,6 +1108,9 @@ body {
           }
         }
       }
+    }
+    #loadingIndicator {
+      display: none;
     }
   }
   #footer {
@@ -1764,7 +1771,7 @@ body {
                       transform: translate(-50%, -50%);
                       background-color: #081c15a8;
                       color: white;
-                      // padding: 50%;
+                      // padding: 10%;
                       opacity: 0;
                       transition: ease-in-out 0.5s;
                       width: 93%;
@@ -1772,37 +1779,34 @@ body {
                       // display: none;
                       // align-content: center;
                       text-align: center;
-                      .card-title {
-                        font-weight: 800;
-                        letter-spacing: 1px;
-                        margin-top: 25px;
-                        text-decoration: underline;
+                      .cardProjectLinks {
+                      display: flex;
+                      padding: 4rem 3rem;
                       }
-                      .card-text {
-                        display: flex;
-                        flex-direction: column;
-                        gap: 20px;
-                        margin-top: 50px;
-                        margin-left: 20px;
-                        text-align: left;
-                        font-weight: 600;
-                        letter-spacing: 1px;
-                      }
-                      .builtWith_title {
-                        margin-top: 50px;
-                        margin-left: 20px;
-                        text-align: left;
-                        font-weight: 700;
-                      }
+                      
                       .builtWith {
-                        margin-left: 20px;
-                        margin-top: 20px;
-                        display: flex;
+                        
+                        margin-left: 15px;
+                        margin-top: 4rem;
+                        display: none;
+                        flex-direction: column;
                         gap: 30px;
                         img {
                           width: 30px;
                           height: 30px;
                         }
+                        .builtWith_title {
+                        // margin-top: 50px;
+                        margin-left: 20px;
+                        text-align: left;
+                        font-size: 1rem;
+                        font-weight: 700;
+                      }
+                      .builtWith_stack {
+                        display: flex;
+                        gap: 2rem;
+                        flex-wrap: wrap;
+                      }
                       }
                       .btn-project {
                         margin-top: 60px;
@@ -1818,8 +1822,8 @@ body {
                       border-radius: 28px;
                       margin-left: 5.8px;
                       margin-right: 12px;
-                      padding-top: 14.5px;
-                      padding-right: 10px;
+                      // padding-top: 14.5px;
+                      // padding-right: 10px;
                       margin-top: 7px;
                       cursor: pointer;
                       width: 93.5%;
@@ -2067,7 +2071,13 @@ body {
             font-weight: 400;
             line-height: normal;
           }
+          .invalidEmail {
+            color: rgb(198, 66, 66);
+            display: none;
+          }
+
         }
+        
       }
       .frameForm2 {
         //Layout
@@ -2136,12 +2146,15 @@ body {
           font-weight: 400;
           line-height: normal;
           &:hover {
-            background-color: var(--color-background);
+            background: var(--color-background);
             color: var(--color-text);
             cursor: pointer;
           }
         }
       }
+    }
+    #loadingIndicator {
+      display: none;
     }
   }
   #footer {
@@ -3724,6 +3737,10 @@ body {
             font-weight: 400;
             line-height: normal;
           }
+          .invalidEmail {
+            color: rgb(198, 66, 66);
+            display: none;
+          }
         }
       }
       .frameForm2 {
@@ -3799,6 +3816,9 @@ body {
           }
         }
       }
+    }
+    #loadingIndicator {
+      display: none;
     }
   }
   #footer {
